Finish the login process

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,15 @@
   <div class="border-4 w-[472px] rounded-3xl px-7 py-9">
     <h1 class="text-center font-poppins font-bold text-4xl pb-8">Swift-Post</h1>
 
-    <form action="" method="post" class="flex flex-col items-start gap-8">
+    <form action="/login" method="post" class="flex flex-col items-start gap-8">
       <div class="input-auth">
-        <label for="username" class="label-auth"> Username:</label>
+        <label for="email" class="label-auth"> Email:</label>
         <input
           class="auth"
           type="text"
-          name="username"
-          id="username"
-          autocomplete="username"
+          name="email"
+          id="email"
+          autocomplete="email"
         />
       </div>
 
