--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
 <main class="flex justify-center items-center h-screen w-full p-8">
   <div class="border-4 w-[472px] rounded-3xl px-7 py-9">
     <h1 class="text-center font-poppins font-bold text-4xl pb-8">Swift-Post</h1>
+    <% include ./partials/messages %>
 
     <form action="/login" method="post" class="flex flex-col items-start gap-8">
       <div class="input-auth">
