--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .input-auth {
   @apply flex flex-col w-full gap-2;
 }
@@ -12,4 +18,15 @@
 
 .label-auth {
   @apply text-xl font-inter;
+}
+
+.active {
+  @apply bg-white px-6 py-1 rounded-3xl text-black;
+}
+
+.create-input {
+  @apply w-full flex justify-between gap-5;
+}
+.shadow-inner {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
