--- a/views/show.ejs
+++ b/views/show.ejs
@@ -21,14 +21,16 @@
         <!-- Time Logs -->
         <section class=" flex flex-col gap-4 h-screen">
             <% storyline.timeLogs.forEach((timeLog) => { %>
-              <article class=" w-1/2 h-60 px-8 py-6 rounded-md inset-0 bg-white shadow-inner flex flex-col mx-auto justify-between border">
-                <p class="text-gray-700 text-lg"><%= timeLog.post %></p>
-                <div class="flex items-center mt-2">
-                  <span class="text-gray-500 text-sm">
-                    <%= new Date(timeLog.createdDate).toLocaleString() %>
-                  </span>
-                </div>
-              </article>
+              <a href="/storyline/time-log/<%= timeLog._id %>">
+                <article class=" w-1/2  px-8 py-12 rounded-md inset-0 bg-white shadow-inner flex flex-col gap-8 mx-auto justify-between border">
+                  <p class="text-gray-700 text-lg"><%= timeLog.post %></p>
+                  <div class="flex items-center mt-2">
+                    <span class="text-gray-500 text-sm">
+                      <%= new Date(timeLog.createdDate).toLocaleString() %>
+                    </span>
+                  </div>
+                </article>
+              </a>
             <% }) %>
         </section>
           
