--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -1,4 +1,4 @@
+<% include ./partials/navigationBar %>
 <main class="h-screen w-full p-8 relative">
-  <div class="absolute right-0 top-0"><% include ./partials/messages %></div>
-  <h1>lol</h1>
+  <% include ./partials/createButton %>
 </main>
