--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,8 @@
-
+<% include ./partials/navigationBar %>
 
 <main class="h-screen w-full p-8">
+  
+  
   <div class="w-full">
     <div class="flex flex-col">
        
@@ -80,6 +82,13 @@
       </div>
     </div>
   </div>
+
+  <% include ./partials/createButton %>
+  
+
+  
+    
+  
   
   
 </main>
