--- a/views/showTimeLog.ejs
+++ b/views/showTimeLog.ejs
@@ -1,3 +1,4 @@
+<% include ./partials/navigationBar %>
 <main class="flex justify-center items-center w-full h-screen">
   <div class="flex flex-col gap-10 border-2 w-3/5 h-1/2 p-7 rounded-3xl">
     <div class="flex gap-5 items-center">
