--- a/views/partials/navigationBar.ejs
+++ b/views/partials/navigationBar.ejs
@@ -10,9 +10,9 @@
     <!-- Profile Image -->
     <a href="/profile">
       <img
-        src="/path/to/profile-image.jpg"
+        src="https://i.pinimg.com/236x/5e/75/4d/5e754dcdb067c149bc7567627dbb5abe.jpg"
         alt="Profile Image"
-        class="rounded-full w-8 h-8"
+        class="rounded-full w-10 aspect-square"
       />
     </a>
 
