--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -1,4 +1,34 @@
 <% include ./partials/navigationBar %>
 <main class="h-screen w-full p-8 relative">
+  <section class="flex flex-col gap-4 items-center">
+    <% timelogs.forEach(function (tl) { %>
+
+      <article class="flex flex-col justify-between gap-5 border-4 p-4 rounded-3xl w-1/2 ">
+        <div>
+          <div class="flex gap-3 items-center">
+            <p class="text-2xl font-extrabold underline"><%= tl.user.username %></p> 
+            <span class="text-lg text-zinc-700">. <%= tl.storylines.title %></span> 
+          </div>
+          <span class="text-zinc-500 text-sm"><%= tl.createdDate.toLocaleDateString() %></span>
+        </div>
+        <div>
+          <p>
+            <%= tl.post %>
+          </p>
+        </div>
+        <div class="flex justify-start gap-4">
+          <button class="bg-black w-10 aspect-square rounded-full">
+            <i class="fa-regular fa-thumbs-up fa-xl" style="color: #ffff"></i>
+          </button>
+          <button class="-scale-x-100 bg-black w-10 aspect-square rounded-full">
+            <i class="fa-regular fa-thumbs-down fa-xl" style="color: #ffff"></i>
+          </button>
+        </div>
+      </article>
+    <% }) %>
+  </section>
+
+  
+
   <% include ./partials/createButton %>
 </main>
