--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,6 @@
 <% include ./partials/navigationBar %>
 
-<main class="h-screen w-full p-8">
-  
+<main class="h-screen w-full p-8"> 
   
   <div class="w-full">
     <div class="flex flex-col">
@@ -13,23 +12,28 @@
           class="rounded-full object-center"
         />
         <div class="my-10 flex flex-col items-start w-full">
-          <h1 class="text-3xl font-bold"><%= user.first_name %></h1>
+          <h1 class="text-3xl font-bold"><%= user.first_name %>  <%= user.last_name %></h1>
           <p class="text-gray-600"><%= user.username %></p>
-          <div class="flex justify-center mt-7">
+          <!-- <div class="flex justify-center mt-7">
             <span class="mr-4">Followers: 2.5k</span>
             <span class="mr-4">Following: 20</span>
             <span>Badges: 3</span>
-          </div>
-          <div class="flex justify-center mt-10 w-72">
-            <button
+          </div> -->
+          <div class="flex gap-2 justify-center mt-10 w-72">
+            <a href="/profile/edit" class="w-full">
+              <button
               class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2 w-full"
               
             >
               Edit
             </button>
-            <button class="bg-red-500 text-white px-4 py-2 rounded-full w-full">
-              Delete
-            </button>
+            </a>
+            <a href="/profile/delete" class="w-full">
+              <button class="bg-red-500 text-white px-4 py-2 rounded-full w-full">
+                Delete
+              </button>
+            </a>
+            
           </div>
         </div>
       </div>
@@ -41,7 +45,7 @@
           Posts
         </h2>
         <div
-          class="w-full flex justify-start gap-4 flex-wrap relative mx-auto"
+          class=" flex justify-start gap-4 flex-wrap relative mx-auto"
         >
           <% if (user.storylines.length > 0) { %> 
             <% user.storylines.forEach((storyline) => { %>
@@ -54,7 +58,7 @@
                 class="min-w-[550px] h-64 rounded-2xl inset-0 bg-white shadow-inner border-2 flex justify-start items-center relative p-8"
               >
                 <div
-                  class="w-96 h-52 rounded-md bg-slate-300 absolute z-30"
+                  class="w-96 h-52 rounded-md bg-white border-4 absolute z-30 flex justify-start items-start p-3 pt-5 pl-9 text-lg"
                 >
                 <% if (storyline.timeLogs.length > 0) { %>
                   <p><%= storyline.timeLogs[0].post %></p>
@@ -64,10 +68,10 @@
                 
               </div>
                 <div
-                  class="w-96 h-52 rounded-md bg-slate-700 absolute left-14 z-20"
+                  class="w-96 h-48 rounded-md bg-white border-4  absolute left-14 z-20"
                 ></div>
                 <div
-                  class="w-96 h-52 rounded-md bg-slate-900 absolute left-20 z-10"
+                  class="w-96 h-44 rounded-md bg-white border-4 absolute left-20 z-10"
                 ></div>
               </div>
             </div>
@@ -84,13 +88,6 @@
   </div>
 
   <% include ./partials/createButton %>
-  
-
-  
-    
-  
-  
-  
 </main>
 
 
