--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,67 @@
-<article>
-  <div>
-    <img src="" alt="" />
-    <div>
-      <p></p>
-      <span></span>
-    </div>
-  </div>
-  <p>THis is my first post in swift-post app</p>
-  <div></div>
-</article>
+<!-- _navbar.ejs -->
+
+<nav class="flex items-center justify-center p-4 bg-white border-b-2">
+  
+    <!-- Title -->
+    <h1 class="text-black text-2xl font-semibold">Swift-Post</h1>
+
+
+ 
+</nav>
+
+
+
+<main class="h-screen w-full   flex   justify-between">
+  <aside class="border-r-2 p-4">
+    <nav class="flex flex-col items-center justify-around gap-4 ">
+      <p>Sign up to create your storylines right now!</p>
+
+      <a href="/register">
+        <button
+        type="submit"
+        class="mx-auto bg-white text-green-600 border-2 border-green-700 rounded-xl px-11 py-3 text-3xl"
+      >
+        Sign-up
+      </button>
+      </a>
+
+      <p>Already a member? Then please login.</p>
+      <a href="/login">
+        <button
+        type="submit"
+        class="mx-auto bg-blue-700 text-white  border-2 border-blue-700 rounded-xl px-11 py-3 text-3xl"
+      >
+        Login
+      </button>
+      </a>
+
+
+    </nav>
+  </aside>
+  <section class="flex flex-col gap-4 items-center  w-full p-4 overflow-y-scroll scroll-smooth ">
+    <% timelogs.forEach(function (tl) { %>
+
+      <article class="flex flex-col justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-1/2 ">
+        <div>
+          <div class="flex gap-3 items-center">
+            
+            <a href="/login"><span class="text-lg text-zinc-700"> Storyline: <strong><%= tl.storylines.title %></strong></span> </a>
+          </div>
+          <span class="text-zinc-500 text-sm"><%= tl.createdDate.toLocaleDateString() %></span>
+        </div>
+        <div>
+          <p>
+            <%= tl.post %>
+          </p>
+        </div>
+        
+      </article>
+    <% }) %>
+  </section>
+
+ 
+
+  
+
+  <% include ./partials/createButton %>
+</main>
