--- a/views/users.ejs
+++ b/views/users.ejs
@@ -7,9 +7,9 @@
        
       <div class="flex justify-start items-center gap-14 w-full">
         <img
-          src="https://i.pinimg.com/236x/5e/75/4d/5e754dcdb067c149bc7567627dbb5abe.jpg"
-          alt="Profile Image"
-          class="rounded-full object-center"
+        src="/images/<%=user.profileImage %>"
+        alt="Profile Image"
+        class="rounded-3xl object-center border w-60 h-60"
         />
         <div class="my-10 flex flex-col items-start w-full">
           <h1 class="text-3xl font-bold"><%= user.first_name %>  <%= user.last_name %></h1>
