--- a/views/partials/navigationBar.ejs
+++ b/views/partials/navigationBar.ejs
@@ -8,13 +8,11 @@
 
   <div class="flex items-center space-x-4">
     <!-- Profile Image -->
-    <a href="/profile">
-      <img
-        src="https://i.pinimg.com/236x/5e/75/4d/5e754dcdb067c149bc7567627dbb5abe.jpg"
-        alt="Profile Image"
-        class="rounded-full w-10 aspect-square"
-      />
-    </a>
+    <a
+      href="/profile"
+      class="text-white bg-zinc-600 px-5 py-2 rounded-2xl hover:text-gray-300 transition duration-300"
+      >Profile</a
+    >
 
     <!-- Explore Button -->
     <a
