Create responsive design

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,10 +1,10 @@
-<main class="flex justify-center items-center w-full h-screen">
+<main class="flex justify-center items-center w-full  p-4">
   <div
-    class="w-[550px]  p-5 flex flex-col justify-start items-center gap-5 rounded-2xl shadow-lg border-2"
+    class="w-[550px]  p-5  flex flex-col justify-start items-center gap-5 rounded-2xl shadow-lg border-2"
   >
     <h1 class="font-extrabold text-4xl font-poppins">Create</h1>
     <nav
-      class="flex justify-between px-6 items-center w-1/2 py-2 rounded-full mb-2 bg-blue-400"
+      class="flex justify-between px-6 items-center w-1/2 max-sm:w-full py-2 rounded-full mb-2 bg-blue-400"
     >
       <button id="storiesBtn" class="active text-lg"><h2>Stories</h2></button>
       <button>
