--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -1,4 +1,4 @@
-<main class="flex justify-center items-center h-screen w-full p-8">
+<main class="flex justify-center items-center w-full p-8">
   <div class="border-4 w-[472px] rounded-3xl px-7 py-9">
     <h1 class="text-center font-poppins font-bold text-4xl pb-8">Swift-Post</h1>
 
