--- a/views/partials/createButton.ejs
+++ b/views/partials/createButton.ejs
@@ -1,7 +1,7 @@
 <a href="/create">
   <button
     title="Add New"
-    class="group fixed right-0 bottom-0 cursor-pointer outline-none hover:rotate-90 duration-300 m-3"
+    class="group z-50 fixed right-0 bottom-0 cursor-pointer outline-none hover:rotate-90 duration-300 m-3"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
