--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@
 }
 
 .label-auth {
-  @apply text-xl font-inter;
+  @apply text-xl font-inter max-sm:text-lg;
 }
 
 .active {
@@ -25,7 +25,7 @@
 }
 
 .create-input {
-  @apply w-full flex justify-between gap-5;
+  @apply w-full flex justify-between gap-5 max-sm:flex-col;
 }
 .shadow-inner {
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
