--- a/public/stylesheets/tailwind.css
+++ b/public/stylesheets/tailwind.css
@@ -596,6 +596,10 @@ video {
   z-index: 30;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .z-\[10000\] {
   z-index: 10000;
 }
@@ -782,6 +786,10 @@ video {
   width: 0.75rem;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .w-3\/5 {
   width: 60%;
 }
@@ -835,6 +843,10 @@ video {
 }
 
 .flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.shrink-0 {
   flex-shrink: 0;
 }
 
@@ -936,6 +948,10 @@ video {
 
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
 .overflow-y-scroll {
@@ -1188,6 +1204,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
@@ -1211,6 +1232,10 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-left {
@@ -1455,6 +1480,13 @@ video {
   line-height: 1.75rem;
 }
 
+@media not all and (min-width: 640px) {
+  .label-auth {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 .active {
   border-radius: 1.5rem;
   --tw-bg-opacity: 1;
@@ -1472,6 +1504,12 @@ video {
   width: 100%;
   justify-content: space-between;
   gap: 1.25rem;
+}
+
+@media not all and (min-width: 640px) {
+  .create-input {
+    flex-direction: column;
+  }
 }
 
 .shadow-inner {
@@ -1548,6 +1586,133 @@ video {
 :is(.dark .dark\:hover\:bg-gray-700:hover) {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+@media not all and (min-width: 1280px) {
+  .max-xl\:min-w-full {
+    min-width: 100%;
+  }
+
+  .max-xl\:flex-col {
+    flex-direction: column;
+  }
+}
+
+@media not all and (min-width: 768px) {
+  .max-md\:w-40 {
+    width: 10rem;
+  }
+
+  .max-md\:w-auto {
+    width: auto;
+  }
+
+  .max-md\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .max-md\:w-full {
+    width: 100%;
+  }
+
+  .max-md\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .max-md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media not all and (min-width: 640px) {
+  .max-sm\:w-1\/2 {
+    width: 50%;
+  }
+
+  .max-sm\:w-full {
+    width: 100%;
+  }
+
+  .max-sm\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-sm\:items-start {
+    align-items: flex-start;
+  }
+
+  .max-sm\:gap-1 {
+    gap: 0.25rem;
+  }
+
+  .max-sm\:gap-4 {
+    gap: 1rem;
+  }
+
+  .max-sm\:p-4 {
+    padding: 1rem;
+  }
+
+  .max-sm\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .max-sm\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
+  .max-sm\:pl-4 {
+    padding-left: 1rem;
+  }
+
+  .max-sm\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
+  .max-sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .max-sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .max-sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .max-sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .max-\[350px\]\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .max-\[350px\]\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .max-\[350px\]\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+}
+
+@media (max-width: 300px) {
+  .max-\[300px\]\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
 }
 
 @media (min-width: 640px) {
