--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,47 +1,45 @@
 <!-- _navbar.ejs -->
 
-<nav class="flex items-center justify-center p-4 bg-white border-b-2">
+
+
+
+
+<main class="h-screen w-full ">
+  <nav class="flex items-center justify-between p-4 max-[350px]:px-3 bg-white border-b-2">
   
     <!-- Title -->
-    <h1 class="text-black text-2xl font-semibold">Swift-Post</h1>
+    <h1 class="text-black text-2xl font-semibold max-sm:text-xl">Swift-Post</h1>
+
+    <div class="flex gap-2">
+      <a href="/register">
+        <button
+        type="submit"
+        class="mx-auto bg-white text-green-600 border-2 border-green-700 rounded-xl px-5 py-2 text-2xl max-sm:text-base  max-[350px]:px-3"
+      >
+        Sign-up
+      </button>
+      </a>
+  
+      <a href="/login">
+        <button
+        type="submit"
+        class="mx-auto bg-blue-700 text-white  border-2 border-blue-700 rounded-xl px-5 py-2 text-2xl max-sm:text-base max-[350px]:px-3"
+      >
+        Login
+      </button>
+      </a>
+    </div>
+
+ 
 
 
  
 </nav>
 
-
-
-<main class="h-screen w-full   flex   justify-between">
-  <aside class="border-r-2 p-4">
-    <nav class="flex flex-col items-center justify-around gap-4 ">
-      <p>Sign up to create your storylines right now!</p>
-
-      <a href="/register">
-        <button
-        type="submit"
-        class="mx-auto bg-white text-green-600 border-2 border-green-700 rounded-xl px-11 py-3 text-3xl"
-      >
-        Sign-up
-      </button>
-      </a>
-
-      <p>Already a member? Then please login.</p>
-      <a href="/login">
-        <button
-        type="submit"
-        class="mx-auto bg-blue-700 text-white  border-2 border-blue-700 rounded-xl px-11 py-3 text-3xl"
-      >
-        Login
-      </button>
-      </a>
-
-
-    </nav>
-  </aside>
-  <section class="flex flex-col gap-4 items-center  w-full p-4 overflow-y-scroll scroll-smooth ">
+  <section class="flex flex-col gap-4 items-center  w-full p-4  scroll-smooth max-sm:p-2 overflow-y-hidden">
     <% timelogs.forEach(function (tl) { %>
 
-      <article class="flex flex-col justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-1/2 ">
+      <article class="flex flex-col justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-3/4 max-sm:w-full ">
         <div>
           <div class="flex gap-3 items-center">
             
@@ -65,3 +63,5 @@
 
   <% include ./partials/createButton %>
 </main>
+
+
