--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,11 @@
 <% include ./partials/navigationBar %>
 
-<main class="h-screen w-full p-8"> 
+<main class="h-screen w-full p-8 max-sm:p-4"> 
   
   <div class="w-full">
     <div class="flex flex-col">
        
-      <div class="flex justify-start items-center gap-14 ">
+      <div class="flex justify-start items-center gap-14 max-md:gap-6 ">
         <form
         id="uploadform"
         hidden
@@ -15,40 +15,40 @@
       >
         <input type="file" name="image" />
       </form>
-        <div class="relative ">
+        <div class="relative shrink-0 ">
           <span id="uploadicon" class="w-10 h-10 absolute bottom-0 right-0 rounded-full flex justify-center items-center bg-blue-400 ">
             <i class="fa-regular fa-pen-to-square" style="color: #fff;"></i>
           </span>
           <img
           src="/images/<%=user.profileImage %>"
           alt="Profile Image"
-          class="rounded-3xl object-center border w-60 h-60"
+          class="rounded-3xl object-center border w-60 aspect-square max-md:w-40"
         />
         </div>
         <div class="my-10 flex flex-col items-start w-full">
-          <h1 class="text-3xl font-bold"><%= user.first_name %>  <%= user.last_name %></h1>
+          <h1 class="text-3xl font-bold max-md:text-2xl"><%= user.first_name %>  <%= user.last_name %></h1>
           <p class="text-gray-600"><%= user.username %></p>
           <!-- <div class="flex justify-center mt-7">
             <span class="mr-4">Followers: 2.5k</span>
             <span class="mr-4">Following: 20</span>
             <span>Badges: 3</span>
           </div> -->
-          <div class="flex gap-2 justify-center mt-10 w-72">
+          <div class="flex gap-2 justify-center mt-10 w-72  max-md:w-auto max-sm:flex-col max-sm:w-full">
             <a href="/profile/edit" class="w-full">
               <button
-              class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2 w-full"
+              class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2 w-full max-md:w-auto max-sm:w-full"
               
             >
               Edit
             </button>
             </a>
             <a href="/profile/logout">
-              <button class=" bg-stone-600 text-white px-4 py-2 rounded-full w-full">
+              <button class=" bg-stone-600 text-white px-4 py-2 rounded-full w-full max-md:w-auto max-sm:w-full">
                 Logout
               </button>
             </a>
             <a href="/profile/delete" class="w-full">
-              <button class="bg-red-500 text-white px-4 py-2 rounded-full w-full">
+              <button class="bg-red-500 text-white px-4 py-2 rounded-full w-full max-md:w-auto max-sm:w-full">
                 Delete
               </button>
             </a>
@@ -66,7 +66,7 @@
           Posts
         </h2>
         <div
-          class=" flex justify-start gap-4 flex-wrap relative mx-auto"
+          class=" flex justify-start gap-4 flex-wrap max-xl:flex-col"
         >
           <% if (user.storylines.length > 0) { %> 
             <% user.storylines.forEach((storyline) => { %>
@@ -76,10 +76,10 @@
               <h3 class="font-bold"> <%= storyline.title %> </h3>
               
               <div
-                class="min-w-[550px] h-64 rounded-2xl inset-0 bg-white shadow-inner border-2 flex justify-start items-center relative p-8"
+                class="min-w-[550px] h-64 rounded-2xl inset-0 bg-white shadow-inner border-2 flex justify-start items-center relative p-8 max-xl:min-w-full"
               >
                 <div
-                  class="w-96 h-52 rounded-md bg-white border-4 absolute z-30 flex justify-start items-start p-3 pt-5 pl-9 text-lg"
+                  class="w-96 h-52 rounded-md bg-white border-4 absolute z-30 flex justify-start items-start p-3 pt-5 pl-9 text-lg overflow-hidden max-sm:pl-4 max-sm:pt-2  max-sm:w-1/2 max-sm:text-base"
                 >
                 <% if (storyline.timeLogs.length > 0) { %>
                   <p><%= storyline.timeLogs[0].post %></p>
@@ -89,10 +89,10 @@
                 
               </div>
                 <div
-                  class="w-96 h-48 rounded-md bg-white border-4  absolute left-14 z-20"
+                  class="w-96 h-48 rounded-md bg-white border-4  absolute left-14 z-20 overflow-hidden max-sm:pl-4 max-sm:pt-2  max-sm:w-1/2 max-sm:text-base"
                 ></div>
                 <div
-                  class="w-96 h-44 rounded-md bg-white border-4 absolute left-20 z-10"
+                  class="w-96 h-44 rounded-md bg-white border-4 absolute left-20 z-10 overflow-hidden max-sm:pl-4 max-sm:pt-2  max-sm:w-1/2 max-sm:text-base"
                 ></div>
               </div>
             </div>
