--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<main class="flex justify-center items-center h-screen w-full p-8">
+<main class="flex justify-center items-center w-full p-8 max-sm:p-4">
   <div class="border-4 w-[472px] rounded-3xl px-7 py-9">
     <h1 class="text-center font-poppins font-bold text-4xl pb-8">Swift-Post</h1>
 
@@ -77,7 +77,7 @@
       </div>
       <button
         type="submit"
-        class="mx-auto bg-white text-green-600 border-2 border-green-700 rounded-xl px-11 py-3 text-3xl"
+        class="mx-auto bg-white text-green-600 border-2 border-green-700 rounded-xl px-11 py-3 text-3xl max-sm:text-xl max-sm:px-7"
       >
         Sign-up
       </button>
