--- a/views/userStoryline.ejs
+++ b/views/userStoryline.ejs
@@ -12,7 +12,7 @@
         <section class=" flex flex-col gap-4 h-screen">
             <% storyline.timeLogs.forEach((timeLog) => { %>
               
-                <article class=" w-1/2  px-8 py-12 rounded-2xl inset-0 bg-white shadow-inner flex flex-col gap-8 mx-auto justify-between border">
+                <article class=" w-1/2 max-md:w-full px-8 py-12 rounded-2xl inset-0 bg-white shadow-inner flex flex-col gap-8 mx-auto justify-between border">
                   <p class="text-gray-700 text-lg"><%= timeLog.post %></p>
                   <div class="flex items-center mt-2">
                     <span class="text-gray-500 text-sm">
